--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,23 @@ body {
   background:#FFDF00;
 }
 
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #FFDF00; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #FFDF00; 
+}
+
 #socialblock {
   width: 100%;
   height: 20%;
@@ -93,7 +110,6 @@ body {
 #buttonsitovecchio {
   border-width: 2px;
   border-color: rgb(255,255,255);
-  padding: 10px 60px;
   font-weight: 500;
   text-transform: uppercase;
   border-radius: 40px;
@@ -146,6 +162,10 @@ body {
   #cover {
 	min-height: 652px;
   }
+    #buttonsitovecchio {
+	padding: 8px 20px;
+	font-size: 0.8rem;
+  }
 }
 
 @media screen and (min-width: 601px) {
@@ -169,5 +189,9 @@ body {
   }
   #cover {
 	min-height: 800px;
+  }
+  #buttonsitovecchio {
+	padding: 10px 60px;
+	font-size: 1.25rem;
   }
 }
