--- a/assets/css/style404.css
+++ b/assets/css/style404.css
@@ -28,21 +28,21 @@ body {
   left: 0%;
   top: 0%;
   animation: rotate-one 1s linear infinite;
-  border-bottom: 3px solid #FFEB3B;
+  border-bottom: 3px solid #FFDF00;
 }
 
 .inner.two {
   right: 0%;
   top: 0%;
   animation: rotate-two 1s linear infinite;
-  border-right: 3px solid #FFEB3B;
+  border-right: 3px solid #FFDF00;
 }
 
 .inner.three {
   right: 0%;
   bottom: 0%;
   animation: rotate-three 1s linear infinite;
-  border-top: 3px solid #FFEB3B;
+  border-top: 3px solid #FFDF00;
 }
 
 @keyframes rotate-one {
