--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,9 +125,11 @@ body {
 
 #seotitle{
 	display:none;
+	color: rgba(255,255,255,0);
 }
 #seodescription{
 	display:none;
+	color: rgba(255,255,255,0);
 }
 
 .scl:hover {
