--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,6 +183,7 @@ body {
     font-size: 1.25rem;
     margin-left: auto;
     margin-right: auto;
+    max-width: none;
   }
   #contentlink {
     padding-top: 36px;
